--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 <body>
   <button id="startARBtn">Start AR</button>
   <button id="captureButton">Capture Image</button>
-<div class="overlay" style="position: relative; display: none;">
+<div class="overlay">
   <img id="maskImage" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;" />
   <button class="button" id="placeFlowerBtn">Place/Move Flower</button>
   <button class="button" id="showInfoBtn">Show Info</button>
