--- a/main.html
+++ b/main.html
@@ -24,8 +24,8 @@
   <button id="captureButton">Capture Image</button>
 <div class="overlay">
   <img id="maskImage" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;" />
-  <button class="button" id="placeFlowerBtn" style="position: absolute; bottom: 20px; left: 20px; z-index: 1;">Place/Move Flower</button>
-  <button class="button" id="showInfoBtn" style="position: absolute; bottom: 20px; left: 140px; z-index: 1;">Show Info</button>
+  <button class="button" id="placeFlowerBtn">Place/Move Flower</button>
+  <button class="button" id="showInfoBtn">Show Info</button>
 </div>
   <div class="info" id="info">Information will be displayed here.</div>
 
