--- a/main.html
+++ b/main.html
@@ -13,20 +13,26 @@
     body { margin: 0; overflow: hidden; }
     canvas { display: block; }
     .overlay { position: absolute; bottom: 10px; right: 10px; z-index: 10; }
-    .button { display: block; margin: 5px 0; padding: 10px; background: rgba(0, 0, 0, 0.5); color: white; border: none; border-radius: 5px; cursor: pointer; }
-    .info { position: absolute; bottom: 10px; right: 150px; z-index: 10; background: rgba(0, 0, 0, 0.5); color: white; padding: 10px; border-radius: 5px; }
-    #startARBtn { position: absolute; top: 10px; left: 10px; z-index: 10; background: rgba(0, 0, 0, 0.7); color: white; padding: 10px; border: none; border-radius: 5px; cursor: pointer; }
-    #captureButton { position: absolute; top: 50px; left: 10px; z-index: 10; background: rgba(0, 0, 0, 0.7); color: white; padding: 10px; border: none; border-radius: 5px; cursor: pointer; }
+    .overlay2 { position: absolute; z-index: 9; }
+    .button { display: block; margin: 5px 0; padding: 10px;  z-index: 12; background: rgba(0, 0, 0, 0.5); color: white; border: none; border-radius: 5px; cursor: pointer; }
+    .info { position: absolute; bottom: 10px; right: 150px; z-index: 12; background: rgba(0, 0, 0, 0.5); color: white; padding: 10px; border-radius: 5px; }
+    #startARBtn { position: absolute; top: 10px; left: 10px; z-index: 12; background: rgba(0, 0, 0, 0.7); color: white; padding: 10px; border: none; border-radius: 5px; cursor: pointer; }
+    #captureButton { position: absolute; top: 50px; left: 10px; z-index: 12; background: rgba(0, 0, 0, 0.7); color: white; padding: 10px; border: none; border-radius: 5px; cursor: pointer; }
   </style>
 </head>
 <body>
   <button id="startARBtn">Start AR</button>
   <button id="captureButton">Capture Image</button>
 <div class="overlay">
-  <img id="maskImage" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;" />
   <button class="button" id="placeFlowerBtn">Place/Move Flower</button>
   <button class="button" id="showInfoBtn">Show Info</button>
 </div>
+
+<div class="overlay2">
+  <img id="maskImage" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;" />
+</div>
+
+  
   <div class="info" id="info">Information will be displayed here.</div>
 
   <script>
@@ -343,10 +349,9 @@ canvas.toBlob((blob) => {
       
 
       try {
-        document.getElementById('info').innerText += '\n' + new Date().toLocaleTimeString();
-
+        document.getElementById('info').innerText += '\n' + new Date().toLocaleTimeString('en-GB', { hour12: false }) + ':' + new Date().getMilliseconds();
         const predictions = await model.predict(batchedImgTensor);
-        document.getElementById('info').innerText += '\n' + 'end';
+        document.getElementById('info').innerText += '\n' + new Date().toLocaleTimeString('en-GB', { hour12: false }) + ':' + new Date().getMilliseconds();
 
         document.getElementById('info').innerText += '\n' + new Date().toLocaleTimeString();
 
