--- a/main.html
+++ b/main.html
@@ -12,8 +12,8 @@
   <style>
     body { margin: 0; overflow: hidden; }
     canvas { display: block; }
-    .overlay { position: absolute; bottom: 10px; right: 10px; z-index: 10; }
-    .overlay2 { position: absolute; z-index: 9; }
+    .overlay { position: absolute; bottom: 10px; right: 11; z-index: 10; }
+    .overlay2 {  display: block;  position: absolute;  top: 0;  left: 0;  width: 100%;  height: 100%;  z-index: 10;}
     .button { display: block; margin: 5px 0; padding: 10px;  z-index: 12; background: rgba(0, 0, 0, 0.5); color: white; border: none; border-radius: 5px; cursor: pointer; }
     .info { position: absolute; bottom: 10px; right: 150px; z-index: 12; background: rgba(0, 0, 0, 0.5); color: white; padding: 10px; border-radius: 5px; }
     #startARBtn { position: absolute; top: 10px; left: 10px; z-index: 12; background: rgba(0, 0, 0, 0.7); color: white; padding: 10px; border: none; border-radius: 5px; cursor: pointer; }
