--- a/main.html
+++ b/main.html
@@ -207,14 +207,27 @@ function initializeWebGLResources(gl) {
   const vertexShader = gl.createShader(gl.VERTEX_SHADER);
   gl.shaderSource(vertexShader, vertexShaderSource);
   gl.compileShader(vertexShader);
+  if (!gl.getShaderParameter(vertexShader, gl.COMPILE_STATUS)) {
+    console.error('Vertex shader compile error:', gl.getShaderInfoLog(vertexShader));
+    document.getElementById('info').innerText += '\nVertex shader compile error: ' + gl.getShaderInfoLog(vertexShader);
+  }
+
   const fragmentShader = gl.createShader(gl.FRAGMENT_SHADER);
   gl.shaderSource(fragmentShader, fragmentShaderSource);
   gl.compileShader(fragmentShader);
+  if (!gl.getShaderParameter(fragmentShader, gl.COMPILE_STATUS)) {
+    console.error('Fragment shader compile error:', gl.getShaderInfoLog(fragmentShader));
+    document.getElementById('info').innerText += '\nFragment shader compile error: ' + gl.getShaderInfoLog(fragmentShader);
+  }
 
   program = gl.createProgram();
   gl.attachShader(program, vertexShader);
   gl.attachShader(program, fragmentShader);
   gl.linkProgram(program);
+  if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
+    console.error('Program link error:', gl.getProgramInfoLog(program));
+    document.getElementById('info').innerText += '\nProgram link error: ' + gl.getProgramInfoLog(program);
+  }
 
   const vertices = new Float32Array([
     -1.0, -1.0,
@@ -243,8 +256,11 @@ async function captureImage(gl, glBinding, dcamera) {
 
   if (!texture) {
     console.error('Failed to get camera texture');
+    document.getElementById('info').innerText += '\nFailed to get camera texture';
     return;
   }
+
+  document.getElementById('info').innerText += '\nTexture acquired. Scaling to ' + scaledWidth + 'x' + scaledHeight;
 
   gl.bindTexture(gl.TEXTURE_2D, copyTexture);
   gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, scaledWidth, scaledHeight, 0, gl.RGBA, gl.UNSIGNED_BYTE, null);
@@ -254,8 +270,11 @@ async function captureImage(gl, glBinding, dcamera) {
 
   if (gl.checkFramebufferStatus(gl.FRAMEBUFFER) !== gl.FRAMEBUFFER_COMPLETE) {
     console.error("Framebuffer incomplete!");
+    document.getElementById('info').innerText += '\nFramebuffer incomplete!';
     return;
   }
+
+  document.getElementById('info').innerText += '\nFramebuffer setup complete';
 
   gl.useProgram(program);
   gl.activeTexture(gl.TEXTURE0);
@@ -269,6 +288,8 @@ async function captureImage(gl, glBinding, dcamera) {
 
   gl.viewport(0, 0, scaledWidth, scaledHeight);
   gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
+
+  document.getElementById('info').innerText += '\nRendering complete. Reading pixels...';
 
   gl.readPixels(0, 0, scaledWidth, scaledHeight, gl.RGBA, gl.UNSIGNED_BYTE, readbackPixels);
 
@@ -287,12 +308,16 @@ async function captureImage(gl, glBinding, dcamera) {
     }
   }
 
+  document.getElementById('info').innerText += '\nPixel data flipped. Creating canvas...';
+
   const canvas = document.createElement('canvas');
   canvas.width = scaledWidth;
   canvas.height = scaledHeight;
   const context = canvas.getContext('2d');
   const imageData = new ImageData(flippedPixels, scaledWidth, scaledHeight);
   context.putImageData(imageData, 0, 0);
+
+  document.getElementById('info').innerText += '\nCanvas created. Converting image for neural network...';
 
   // Преобразование изображения для нейросети
   const imgTensor = tf.browser.fromPixels(canvas, 3);
@@ -324,6 +349,8 @@ async function captureImage(gl, glBinding, dcamera) {
     }
 
     maskCtx.putImageData(maskImageData, 0, 0);
+    document.getElementById('info').innerText += '\nPrediction processed. Displaying mask...';
+
     const maskImageElement = document.getElementById('maskImage');
     maskImageElement.src = maskCanvas.toDataURL('image/png');
     document.querySelector('.overlay').style.display = 'block';
@@ -333,6 +360,7 @@ async function captureImage(gl, glBinding, dcamera) {
     document.getElementById('info').innerText += "\nError during model prediction: " + error.message;
   }
 }
+
 
 
     document.getElementById('startARBtn').addEventListener('click', startAR);
