--- a/main.html
+++ b/main.html
@@ -207,27 +207,15 @@ function initializeWebGLResources(gl) {
   const vertexShader = gl.createShader(gl.VERTEX_SHADER);
   gl.shaderSource(vertexShader, vertexShaderSource);
   gl.compileShader(vertexShader);
-  if (!gl.getShaderParameter(vertexShader, gl.COMPILE_STATUS)) {
-    console.error('Vertex shader compile error:', gl.getShaderInfoLog(vertexShader));
-    document.getElementById('info').innerText += '\nVertex shader compile error: ' + gl.getShaderInfoLog(vertexShader);
-  }
 
   const fragmentShader = gl.createShader(gl.FRAGMENT_SHADER);
   gl.shaderSource(fragmentShader, fragmentShaderSource);
   gl.compileShader(fragmentShader);
-  if (!gl.getShaderParameter(fragmentShader, gl.COMPILE_STATUS)) {
-    console.error('Fragment shader compile error:', gl.getShaderInfoLog(fragmentShader));
-    document.getElementById('info').innerText += '\nFragment shader compile error: ' + gl.getShaderInfoLog(fragmentShader);
-  }
 
   program = gl.createProgram();
   gl.attachShader(program, vertexShader);
   gl.attachShader(program, fragmentShader);
   gl.linkProgram(program);
-  if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
-    console.error('Program link error:', gl.getProgramInfoLog(program));
-    document.getElementById('info').innerText += '\nProgram link error: ' + gl.getProgramInfoLog(program);
-  }
 
   const vertices = new Float32Array([
     -1.0, -1.0,
@@ -256,11 +244,8 @@ async function captureImage(gl, glBinding, dcamera) {
 
   if (!texture) {
     console.error('Failed to get camera texture');
-    document.getElementById('info').innerText += '\nFailed to get camera texture';
     return;
   }
-
-  document.getElementById('info').innerText += '\nTexture acquired. Scaling to ' + scaledWidth + 'x' + scaledHeight;
 
   gl.bindTexture(gl.TEXTURE_2D, copyTexture);
   gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, scaledWidth, scaledHeight, 0, gl.RGBA, gl.UNSIGNED_BYTE, null);
@@ -270,7 +255,6 @@ async function captureImage(gl, glBinding, dcamera) {
 
   if (gl.checkFramebufferStatus(gl.FRAMEBUFFER) !== gl.FRAMEBUFFER_COMPLETE) {
     console.error("Framebuffer incomplete!");
-    document.getElementById('info').innerText += '\nFramebuffer incomplete!';
     return;
   }
 
@@ -293,8 +277,10 @@ async function captureImage(gl, glBinding, dcamera) {
 
   gl.readPixels(0, 0, scaledWidth, scaledHeight, gl.RGBA, gl.UNSIGNED_BYTE, readbackPixels);
 
+  document.getElementById('info').innerText += '\nPixels read. Processing...';
+
   // Обработка переворота изображения
-  const flippedPixels = new Uint8ClampedArray(readbackPixels);
+  const flippedPixels = new Uint8ClampedArray(readbackPixels.length);
 
   for (let y = 0; y < scaledHeight; y++) {
     for (let x = 0; x < scaledWidth; x++) {
@@ -308,16 +294,14 @@ async function captureImage(gl, glBinding, dcamera) {
     }
   }
 
-  document.getElementById('info').innerText += '\nPixel data flipped. Creating canvas...';
-
   const canvas = document.createElement('canvas');
   canvas.width = scaledWidth;
   canvas.height = scaledHeight;
   const context = canvas.getContext('2d');
-  const imageData = new ImageData(flippedPixels, scaledWidth, scaledHeight);
+  const imageData = new ImageData(flippedPixels, 224, 224);
   context.putImageData(imageData, 0, 0);
 
-  document.getElementById('info').innerText += '\nCanvas created. Converting image for neural network...';
+  document.getElementById('info').innerText += '\nImage processed. Preparing for model input...';
 
   // Преобразование изображения для нейросети
   const imgTensor = tf.browser.fromPixels(canvas, 3);
@@ -326,9 +310,9 @@ async function captureImage(gl, glBinding, dcamera) {
   const batchedImgTensor = resizedImgTensor.expandDims();
 
   try {
-    document.getElementById('info').innerText += '\n' + new Date().toLocaleTimeString('en-GB', { hour12: false }) + ':' + new Date().getMilliseconds();
+    document.getElementById('info').innerText += '\nModel prediction started...';
     const predictions = await model.predict(batchedImgTensor);
-    document.getElementById('info').innerText += '\n' + new Date().toLocaleTimeString('en-GB', { hour12: false }) + ':' + new Date().getMilliseconds();
+    document.getElementById('info').innerText += '\nModel prediction complete. Processing results...';
 
     console.log("Model predictions:", predictions);
 
@@ -349,17 +333,17 @@ async function captureImage(gl, glBinding, dcamera) {
     }
 
     maskCtx.putImageData(maskImageData, 0, 0);
-    document.getElementById('info').innerText += '\nPrediction processed. Displaying mask...';
-
     const maskImageElement = document.getElementById('maskImage');
     maskImageElement.src = maskCanvas.toDataURL('image/png');
     document.querySelector('.overlay').style.display = 'block';
 
+    document.getElementById('info').innerText += '\nMask image displayed.';
   } catch (error) {
     console.error('Error during model prediction:', error);
     document.getElementById('info').innerText += "\nError during model prediction: " + error.message;
   }
 }
+
 
 
 
