--- a/main.html
+++ b/main.html
@@ -263,9 +263,9 @@ async function captureImage(gl, glBinding, dcamera) {
   }
 
   // Освобождение ресурсов
-  gl.bindFramebuffer(gl.FRAMEBUFFER, null);
-  gl.deleteFramebuffer(framebuffer);
-  gl.deleteTexture(readTexture);
+ // gl.bindFramebuffer(gl.FRAMEBUFFER, null);
+  //gl.deleteFramebuffer(framebuffer);
+  //gl.deleteTexture(readTexture);
 }
 
 
