--- a/main.html
+++ b/main.html
@@ -171,49 +171,63 @@
         return;
       }
     }
-// Инициализация WebGL и ресурсов
-function initWebGLResources(gl) {
-  // Создание шейдеров
-  const vertexShaderSource = `
-    attribute vec4 aVertexPosition;
-    varying vec2 vTexCoord;
-    void main(void) {
-      gl_Position = aVertexPosition;
-      vTexCoord = (aVertexPosition.xy + 1.0) / 2.0;
-    }
-  `;
+const fragmentSource = `
+  #extension GL_OES_EGL_image_external : require
+  precision mediump float;
+  varying vec2 vTexCoord;
+  uniform samplerExternalOES uSampler;
+  void main(void) {
+    gl_FragColor = texture2D(uSampler, vTexCoord);
+  }
+`;
 
-  const fragmentShaderSource = `
-    precision mediump float;
-    varying vec2 vTexCoord;
-    uniform sampler2D uSampler;
-    void main(void) {
-      gl_FragColor = texture2D(uSampler, vTexCoord);
-    }
-  `;
+const vertexSource = `
+  attribute vec4 aVertexPosition;
+  attribute vec2 aTextureCoord;
+  varying vec2 vTexCoord;
+  void main(void) {
+    gl_Position = aVertexPosition;
+    vTexCoord = aTextureCoord;
+  }
+`;
 
-  // Компиляция шейдеров
-  const vertexShader = gl.createShader(gl.VERTEX_SHADER);
-  gl.shaderSource(vertexShader, vertexShaderSource);
-  gl.compileShader(vertexShader);
+function getShader(gl, source, type) {
+  const shader = gl.createShader(type === 'fragment' ? gl.FRAGMENT_SHADER : gl.VERTEX_SHADER);
+  gl.shaderSource(shader, source);
+  gl.compileShader(shader);
+  if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
+    console.error(gl.getShaderInfoLog(shader));
+    gl.deleteShader(shader);
+    return null;
+  }
+  return shader;
+}
 
-  const fragmentShader = gl.createShader(gl.FRAGMENT_SHADER);
-  gl.shaderSource(fragmentShader, fragmentShaderSource);
-  gl.compileShader(fragmentShader);
+function getProgram(gl, vertexSource, fragmentSource) {
+  const vertexShader = getShader(gl, vertexSource, 'vertex');
+  const fragmentShader = getShader(gl, fragmentSource, 'fragment');
+  if (!vertexShader || !fragmentShader) return null;
 
   const program = gl.createProgram();
   gl.attachShader(program, vertexShader);
   gl.attachShader(program, fragmentShader);
   gl.linkProgram(program);
-
   if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
-    document.getElementById('info').innerText += '\n' + new Date().toLocaleTimeString('en-GB', { hour12: false }) + ': Unable to initialize the shader program: ' + gl.getProgramInfoLog(program);
+    console.error('Unable to initialize the shader program: ' + gl.getProgramInfoLog(program));
     return null;
   }
+  return program;
+}
 
-  // Создание текстуры и фреймбуфера
+function initWebGLResources(gl) {
+  const program = getProgram(gl, vertexSource, fragmentSource);
   const copyTexture = gl.createTexture();
   const framebuffer = gl.createFramebuffer();
+
+  gl.bindFramebuffer(gl.FRAMEBUFFER, framebuffer);
+  gl.bindTexture(gl.TEXTURE_EXTERNAL_OES, copyTexture);
+  gl.texParameteri(gl.TEXTURE_EXTERNAL_OES, gl.TEXTURE_MIN_FILTER, gl.NEAREST);
+  gl.texParameteri(gl.TEXTURE_EXTERNAL_OES, gl.TEXTURE_MAG_FILTER, gl.NEAREST);
 
   return { program, copyTexture, framebuffer };
 }
@@ -221,106 +235,90 @@ function initWebGLResources(gl) {
 async function captureImage(gl, glBinding, dcamera, resources) {
   const { program, copyTexture, framebuffer } = resources;
 
-  // Получаем текстуру с камеры
   const texture = glBinding.getCameraImage(dcamera);
   const width = dcamera.width;
   const height = dcamera.height;
 
   if (!texture) {
-    document.getElementById('info').innerText += '\n' + new Date().toLocaleTimeString('en-GB', { hour12: false }) + ': Failed to get camera texture';
+    document.getElementById('info').innerText += 'Failed to get camera texture';
     return;
   }
 
-  const scale = 1;
-  const scaledWidth = Math.floor(width * scale);
-  const scaledHeight = Math.floor(height * scale);
-  const textureBytes = scaledWidth * scaledHeight * 4;
-
-  let readbackPixels = new Uint8Array(textureBytes);
-  readbackPixels.fill(0);
-
-  // Настройка текстуры для рендеринга
-  gl.bindTexture(gl.TEXTURE_2D, copyTexture);
-  gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, scaledWidth, scaledHeight, 0, gl.RGBA, gl.UNSIGNED_BYTE, null);
-
-  // Настройка фреймбуфера
   gl.bindFramebuffer(gl.FRAMEBUFFER, framebuffer);
-  gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, copyTexture, 0);
+  gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_EXTERNAL_OES, copyTexture, 0);
 
   if (gl.checkFramebufferStatus(gl.FRAMEBUFFER) !== gl.FRAMEBUFFER_COMPLETE) {
-    document.getElementById('info').innerText += '\n' + new Date().toLocaleTimeString('en-GB', { hour12: false }) + ': Framebuffer incomplete!';
+    document.getElementById('info').innerText += 'Framebuffer incomplete!';
     return;
   }
 
   gl.useProgram(program);
   gl.activeTexture(gl.TEXTURE0);
-  gl.bindTexture(gl.TEXTURE_2D, texture);
-  gl.uniform1i(gl.getUniformLocation(program, "uSampler"), 0);
+  gl.bindTexture(gl.TEXTURE_EXTERNAL_OES, texture);
+  gl.uniform1i(gl.getUniformLocation(program, 'uSampler'), 0);
 
-  // Настройка вершин для рендеринга
   const vertices = new Float32Array([
-    -1.0, -1.0,
-    1.0, -1.0,
-    -1.0, 1.0,
-    1.0, 1.0,
+    -1.0, -1.0, 0.0, 0.0,
+     1.0, -1.0, 1.0, 0.0,
+    -1.0,  1.0, 0.0, 1.0,
+     1.0,  1.0, 1.0, 1.0
   ]);
 
   const positionBuffer = gl.createBuffer();
   gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
   gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW);
-  const position = gl.getAttribLocation(program, "aVertexPosition");
+
+  const position = gl.getAttribLocation(program, 'aVertexPosition');
+  const texCoord = gl.getAttribLocation(program, 'aTextureCoord');
+
   gl.enableVertexAttribArray(position);
-  gl.vertexAttribPointer(position, 2, gl.FLOAT, false, 0, 0);
+  gl.vertexAttribPointer(position, 2, gl.FLOAT, false, 16, 0);
 
-  gl.viewport(0, 0, scaledWidth, scaledHeight);
+  gl.enableVertexAttribArray(texCoord);
+  gl.vertexAttribPointer(texCoord, 2, gl.FLOAT, false, 16, 8);
+
+  gl.viewport(0, 0, width, height);
   gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
-  gl.readPixels(0, 0, scaledWidth, scaledHeight, gl.RGBA, gl.UNSIGNED_BYTE, readbackPixels);
 
-  // Освобождение ресурсов
-  gl.bindFramebuffer(gl.FRAMEBUFFER, null);
-  gl.deleteBuffer(positionBuffer);
+  let readbackPixels = new Uint8Array(width * height * 4);
+  gl.readPixels(0, 0, width, height, gl.RGBA, gl.UNSIGNED_BYTE, readbackPixels);
 
+  // Flip image vertically
   let flippedPixels = new Uint8ClampedArray(readbackPixels.length);
-
-  // Переворот изображения на 180 градусов
-  for (let y = 0; y < scaledHeight; y++) {
-    for (let x = 0; x < scaledWidth; x++) {
-      const srcIndex = (y * scaledWidth + x) * 4;
-      const destIndex = ((scaledHeight - 1 - y) * scaledWidth + x) * 4;
-
-      flippedPixels[destIndex] = readbackPixels[srcIndex];         // R
-      flippedPixels[destIndex + 1] = readbackPixels[srcIndex + 1]; // G
-      flippedPixels[destIndex + 2] = readbackPixels[srcIndex + 2]; // B
-      flippedPixels[destIndex + 3] = readbackPixels[srcIndex + 3]; // A
+  for (let y = 0; y < height; y++) {
+    for (let x = 0; x < width; x++) {
+      const srcIndex = (y * width + x) * 4;
+      const destIndex = ((height - 1 - y) * width + x) * 4;
+      flippedPixels.set(readbackPixels.slice(srcIndex, srcIndex + 4), destIndex);
     }
   }
 
-  // Создание canvas для сохранения изображения
+  // Create canvas to save image
   let canvas = document.createElement('canvas');
-  canvas.width = scaledWidth;
-  canvas.height = scaledHeight;
+  canvas.width = width;
+  canvas.height = height;
   let context = canvas.getContext('2d');
-  let imageData = new ImageData(flippedPixels, scaledWidth, scaledHeight);
+  let imageData = new ImageData(flippedPixels, width, height);
   context.putImageData(imageData, 0, 0);
 
-  // Преобразование изображения в формат, подходящий для нейросети
   const imgTensor = tf.browser.fromPixels(canvas, 3);
   const normalizedImgTensor = imgTensor.div(255.0);
   const resizedImgTensor = tf.image.resizeBilinear(normalizedImgTensor, [224, 224]);
   const batchedImgTensor = resizedImgTensor.expandDims();
 
   try {
-    document.getElementById('info').innerText += '\n' + new Date().toLocaleTimeString('en-GB', { hour12: false }) + ': Start model prediction';
+    document.getElementById('info').innerText += '\n' + new Date().toLocaleTimeString('en-GB', { hour12: false }) + ':' + new Date().getMilliseconds();
     const predictions = await model.predict(batchedImgTensor);
-    document.getElementById('info').innerText += '\n' + new Date().toLocaleTimeString('en-GB', { hour12: false }) + ': Model prediction completed';
+    document.getElementById('info').innerText += '\n' + new Date().toLocaleTimeString('en-GB', { hour12: false }) + ':' + new Date().getMilliseconds();
+    document.getElementById('info').innerText += '\n' + new Date().toLocaleTimeString();
 
     console.log("Model predictions:", predictions);
-    document.getElementById('info').innerText += '\n' + new Date().toLocaleTimeString('en-GB', { hour12: false }) + ': Start convert predict';
+    document.getElementById('info').innerText += "Start convert predict";
     
-    // Обработка и отображение предсказаний
+    // Process and display predictions
     const unetMask = predictions;
     const unetMaskArray = unetMask.dataSync();
-    document.getElementById('info').innerText += '\n' + new Date().toLocaleTimeString('en-GB', { hour12: false }) + ': Datasync completed';
+    document.getElementById('info').innerText += "datasync";
     const maskCanvas = document.createElement('canvas');
     maskCanvas.width = 224;
     maskCanvas.height = 224;
@@ -337,17 +335,17 @@ async function captureImage(gl, glBinding, dcamera, resources) {
 
     maskCtx.putImageData(maskImageData, 0, 0);
 
-    // Сохранение изображения в формате base64 и установка его в элемент
     const maskImageElement = document.getElementById('maskImage');
     maskImageElement.src = maskCanvas.toDataURL('image/png');
 
-    // Показ overlay
     document.querySelector('.overlay').style.display = 'block';
 
   } catch (error) {
-    document.getElementById('info').innerText += '\n' + new Date().toLocaleTimeString('en-GB', { hour12: false }) + ': Error during model prediction: ' + error.message;
+    console.error('Error during model prediction:', error);
+    document.getElementById('info').innerText += "\nError during model prediction: " + error.message;
   }
 }
+
 
 
 
