--- a/video.html
+++ b/video.html
@@ -3,23 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real-time Camera Processing with TensorFlow.js</title>
+    <title>Real-time Camera and TensorFlow.js</title>
     <style>
-        video, canvas {
+        #camera, #outputCanvas, #predictionCanvas {
             position: absolute;
             top: 0;
             left: 0;
         }
-
-        #predictionCanvas {
-            opacity: 0.5; /* Прозрачность для наложения */
+        #results {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            color: white;
+            font-size: 18px;
         }
     </style>
 </head>
 <body>
     <video id="camera" autoplay playsinline></video>
-    <canvas id="outputCanvas"></canvas>
-    <canvas id="predictionCanvas"></canvas>
+    <canvas id="outputCanvas" width="512" height="512"></canvas>
+    <canvas id="predictionCanvas" width="224" height="224"></canvas>
+
+    <div id="results">
+        <p id="position-result">Position: </p>
+        <p id="orientation-result">Orientation: </p>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script>
@@ -28,6 +36,7 @@
         let predictionCanvas = document.getElementById('predictionCanvas');
         let outputCtx = outputCanvas.getContext('2d');
         let predictionCtx = predictionCanvas.getContext('2d');
+
         let model;
 
         // Загрузка модели
@@ -38,52 +47,44 @@
 
         // Инициализация камеры
         async function setupCamera() {
-const stream = await navigator.mediaDevices.getUserMedia({
-    video: {
-        facingMode: { exact: "environment" } // Выбор задней камеры
-    }
-});
-video.srcObject = stream;
-
+            const stream = await navigator.mediaDevices.getUserMedia({
+                video: { facingMode: { exact: "environment" } }
+            });
+            video.srcObject = stream;
             video.addEventListener('loadeddata', () => {
-                outputCanvas.width = video.videoWidth;
-                outputCanvas.height = video.videoHeight;
-                predictionCanvas.width = video.videoWidth;
-                predictionCanvas.height = video.videoHeight;
-
-                processVideoFrame(); // Начинаем обработку кадров
+                processVideoFrame(); // Начинаем обработку
             });
         }
 
         // Обработка каждого кадра с камеры
-        function processVideoFrame() {
-            // Рисуем текущий кадр на холсте
+        async function processVideoFrame() {
             outputCtx.drawImage(video, 0, 0, outputCanvas.width, outputCanvas.height);
 
-            // Получаем изображение с холста и конвертируем в тензор
-            let imageData = outputCtx.getImageData(0, 0, outputCanvas.width, outputCanvas.height);
-            let tensor = tf.browser.fromPixels(imageData)
-                .resizeBilinear([224, 224])  // Меняем размер для модели
-                .expandDims(0)  // Добавляем размерность для батча
-                .div(255);  // Нормализуем пиксели
+            // Преобразование изображения в тензор
+            let imageTensor = tf.browser.fromPixels(outputCanvas, 1)
+                                        .resizeBilinear([224, 224])
+                                        .div(255.0)
+                                        .expandDims();
 
-            // Прогоняем кадр через модель
-            model.predict(tensor).then(prediction => {
-                
-                let mask = await model.predict(imageTensor);
-                renderMask(mask);
-            });
+            // Прогоняем через модель
+            const predictions = await model.predict(imageTensor);
 
-            requestAnimationFrame(processVideoFrame); // Повторяем обработку для следующего кадра
-        }
+            // Получаем предсказанную маску (224x224, один канал, от 0 до 1)
+            const unetMask = predictions[0];
+            const unetMaskArray = unetMask.dataSync();
+            const imageData = predictionCtx.createImageData(224, 224);
 
-        // Отображение предсказанной маски поверх изображения
-        function renderMask(maskTensor) {
-            // Конвертируем маску в пиксели и отображаем на втором холсте
-            tf.browser.toPixels(maskTensor, predictionCanvas).then(() => {
-                predictionCtx.clearRect(0, 0, predictionCanvas.width, predictionCanvas.height);
-                predictionCtx.drawImage(predictionCanvas, 0, 0, predictionCanvas.width, predictionCanvas.height);
-            });
+            for (let i = 0; i < 224 * 224; i++) {
+                const value = unetMaskArray[i] * 255;  // Масштабируем значения к [0, 255]
+                imageData.data[i * 4] = value;         // R
+                imageData.data[i * 4 + 1] = value;     // G
+                imageData.data[i * 4 + 2] = value;     // B
+                imageData.data[i * 4 + 3] = 255;       // A (прозрачность)
+            }
+
+            predictionCtx.putImageData(imageData, 0, 0);
+
+            requestAnimationFrame(processVideoFrame); // Повторяем обработку
         }
 
         // Инициализация: загрузка модели и установка камеры
