--- a/video.html
+++ b/video.html
@@ -68,15 +68,15 @@
             for (let y = 0; y < 224; y++) {
                 for (let x = 0; x < 224; x++) {
                     const value = unetMaskArray[y * 224 + x] * 255;  // Приведение значений к диапазону [0, 255]
-                    #const destX = Math.floor(x * scale);
-                    #const destY = Math.floor(y * scale);
+                    //const destX = Math.floor(x * scale);
+                    //const destY = Math.floor(y * scale);
 
                     // Корректное позиционирование пикселей
-                    const index = (destY * cameraCanvas.width + destX) * 4;
+                    const index = (y * cameraCanvas.width + x) * 4;
                     maskImageData.data[index + 0] = value;       // R
                     maskImageData.data[index + 1] = value;         // G
                     maskImageData.data[index + 2] = value;         // B
-                    maskImageData.data[index + 3] = value; // A (полупрозрачность)
+                    maskImageData.data[index + 3] = 255-value; // A (полупрозрачность)
                 }
             }
 
