--- a/video.html
+++ b/video.html
@@ -42,40 +42,45 @@
             });
         }
 
-async function processVideoFrame() {
-    // Отображаем изображение с камеры
-    cameraCtx.drawImage(video, 0, 0, cameraCanvas.width, cameraCanvas.height);
+        // Обработка каждого кадра с камеры
+        async function processVideoFrame() {
+            // Отображаем изображение с камеры
+            cameraCtx.drawImage(video, 0, 0, cameraCanvas.width, cameraCanvas.height);
 
-    // Преобразование изображения в тензор
-    let imageTensor = tf.browser.fromPixels(cameraCanvas, 3)
-                                .resizeBilinear([224, 224])
-                                .div(255.0)
-                                .expandDims();
+            // Преобразование изображения в тензор
+            let imageTensor = tf.browser.fromPixels(cameraCanvas, 3)
+                                        .resizeBilinear([224, 224])
+                                        .div(255.0)
+                                        .expandDims();
 
-    // Прогоняем через модель
-    const predictions = await model.predict(imageTensor);
+            // Прогоняем через модель
+            const predictions = await model.predict(imageTensor);
 
-    // Получаем предсказанную маску (224x224, один канал, от 0 до 1)
-    const unetMask = predictions.squeeze();  // Убираем лишние размерности
+            // Получаем предсказанную маску (224x224, один канал, от 0 до 1)
+            const unetMask = predictions;
+            const unetMaskArray = unetMask.dataSync();
 
-    // Приведение маски к диапазону [0, 255]
-    const maskResized = unetMask.mul(255).cast('int32');
+            // Создание изображения для маски
+            const maskImageData = cameraCtx.createImageData(224, 224);
 
-    // Конвертация маски обратно в ImageData
-    const maskImageData = await tf.browser.toPixels(maskResized);
+            for (let y = 0; y < 224; y++) {
+                for (let x = 0; x < 224; x++) {
+                    const value = unetMaskArray[y * 224 + x] * 255;  // Приведение значений к диапазону [0, 255]
+                    const index = (y * 224 + x) * 4;
+                    maskImageData.data[index + 0] = value;       // R
+                    maskImageData.data[index + 1] = value;       // G
+                    maskImageData.data[index + 2] = value;       // B
+                    maskImageData.data[index + 3] = 100;         // A (прозрачность маски)
+                }
+            }
 
-    // Создаем пустое изображение для маски (размер 512x512)
-    const maskCanvas = document.createElement('canvas');
-    maskCanvas.width = cameraCanvas.width;
-    maskCanvas.height = cameraCanvas.height;
-    const maskCtx = maskCanvas.getContext('2d');
+            // Масштабируем маску до размеров холста (512x512) и накладываем поверх видео
+            cameraCtx.putImageData(maskImageData, 0, 0);
+           // cameraCtx.globalAlpha = 0.5;  // Устанавливаем прозрачность для маски
+            //cameraCtx.drawImage(maskImageData, 0, 0, 512, 512);
 
-    // Преобразование maskImageData в изображение и масштабирование
-    const maskImage = new ImageData(new Uint8ClampedArray(maskImageData), 224, 224);
-    maskCtx.putImageData(maskImage, 0, 0);
-
-    requestAnimationFrame(processVideoFrame); // Повторяем обработку
-}
+            requestAnimationFrame(processVideoFrame); // Повторяем обработку
+        }
 
         // Инициализация: загрузка модели и установка камеры
         loadModel().then(setupCamera);
